--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -293,6 +293,7 @@ span.behance a:hover {
 
 .navbar ul li.store-link a {
     color: #ccc;
+    font-weight: bold;
     text-shadow: 1px 1px 1px #000000;
     filter: dropshadow(color=#000000, offx=1, offy=1);
 }
