--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -533,6 +533,10 @@ button:hover {
     text-align: center;
 }
 
+.portfolio-tags {
+    margin: 15px 0 15px 15px;
+}
+
 .related-thumbs {
     text-align: left !important;
 }
