--- a/templates/portfolio/detail.html
+++ b/templates/portfolio/detail.html
@@ -1,4 +1,5 @@
 {% extends "base-no-aside.html" %}
+{% load tagging_tags %}
 
 {% block page_title %}{{ work.meta_title }}{% endblock %}
 
@@ -10,6 +11,13 @@
     <article>
         <h1>Gallery: {{ work.title }}</h1>
         <img src="{{ work.original_image.url }}" class="portfolio-large" />
+
+        {% tags_for_object work as tags %}
+        {% if tags %}
+        <div class="portfolio-tags">
+            <b>Tags:</b> {% for tag in tags %}{{ tag }}{% if forloop.last %}{% else %}, {% endif %}{% endfor %}
+        </div>
+        {% endif %}
 
         {% if work.related_content.all %}
         <h2>Related Work</h2>
