--- a/templates/base-no-aside.html
+++ b/templates/base-no-aside.html
@@ -16,6 +16,8 @@
     <script type="text/javascript" src="http://use.typekit.com/wmv5dmj.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/base.css">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/skeleton.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/screen.css">
 
     {% block css_extra %}{% endblock %}
@@ -44,35 +46,26 @@
 </head>
 
 <body id="gregnewman-org" class="{% block body-class %}base{% endblock %}">
-    <div id="container">
-        <div class="top-banner">
-            <div class="top-banner-content">
-                <span class="title">Illustrator ~ Artist ~ Devigner</span>
-                <div class="social">
-                    <span class="twitter"><a href="http://twitter.com/gregnewman"></a></span>
-                    <span class="dribbble"><a href="http://dribbble.com/newman"></a></span>
-                    <span class="facebook"><a href="https://www.facebook.com/NewmanStudiosFineArt"></a></span>
-                    <span class="flickr"><a href="http://www.flickr.com/photos/busyashell/"></a></span>
-                    <span class="behance"><a href="http://www.behance.net/gregnewman"></a></span>
-                </div>
-            </div>
-        </div>
-
-        <header>
-        <span class="gnewman"><a href="/"><img src="{{ STATIC_URL }}img/logo.png" /></a></span>
+    <div class="container">
+        <header class="sixteen columns">
             <div class="navbar">
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about/">About</a></li>
-                    <li><a href="/journal/">Blog</a></li> 
-                    <li><a href="/portfolio/">Gallery</a></li>
-                    <li><a href="/commissions/">Commissions</a></li>
-                    <li><a href="/contact/">Contact</a></li>
                     <li class="store-link"><a href="http://shop.gregnewman.org">Store</a></li>
+                    <li><a href="/about/">About</a></li>
+                    <li><a href="/commissions/">Commissions</a></li>
+                    <li><a href="/journal/">Journal</a></li> 
+                    <li><a href="/portfolio/">Gallery</a></li>
+                    <li><a href="/contact/">Contact</a></li>
                 </ul>
             </div>
-            <div class="clearfix"></div>
-            {% comment %}<div class="banners"></div>{% endcomment %}
+            <div class="social">
+                <span class="twitter"><a href="http://twitter.com/gregnewman"></a></span>
+                <span class="dribbble"><a href="http://dribbble.com/newman"></a></span>
+                <span class="facebook"><a href="https://www.facebook.com/NewmanStudiosFineArt"></a></span>
+                <span class="flickr"><a href="http://www.flickr.com/photos/busyashell/"></a></span>
+                <span class="behance"><a href="http://www.behance.net/gregnewman"></a></span>
+            </div>
+            <h1><a href="/"><img src="{{ STATIC_URL }}img/logo.png" /></a></h1>
         </header>
 
         <div id="main" role="main">
