--- a/templates/blog/category_entries.html
+++ b/templates/blog/category_entries.html
@@ -1,5 +1,7 @@
 {% extends "site_base.html" %}
 
+{% block body-class %}journal-body{% endblock %}
+
 {% block content %}
     {% for entry in entries %}
         {{ entry.title }}<br />
