--- a/templates/blog/entry_detail.html
+++ b/templates/blog/entry_detail.html
@@ -7,35 +7,25 @@
 {% block meta_keywords %}{{ entry.keywords }}{% endblock %}
 {% block meta_description %}{{ entry.description }}{% endblock %}
 
+
+{% block body-class %}journal-body journal-entry{% endblock %}
 {% block content %}
-    <article>
-        <h1><span class="entry-date">{{ entry.created_on|date:"M. jS, Y" }}</span>
-            {{ entry.title }}</h1>
+    <article class="thirteen columns alpha">
+        <span class="entry-date">{{ entry.created_on|date:"M. jS, Y" }}</span>
+        <h1 class="entry-h1">{{ entry.title }}</h1>
         <div class="entry-body">
             {{ entry.body|apply_markup:entry.markup }}
         </div>
-        <div class="entry-extra">
-            <div class="social-buttons">
-                <script src="//platform.twitter.com/widgets.js" type="text/javascript"></script>
-                <a href="https://twitter.com/share" class="twitter-share-button" data-via="gregnewman" data-text="A must read:">Tweet</a>
-                
-                <g:plusone size="medium" annotation="none"></g:plusone>
-                <script type="text/javascript">
-                  (function() {
-                    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-                    po.src = 'https://apis.google.com/js/plusone.js';
-                    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-                  })();
-                </script>
-            </div>
 
-            {% if entry.tags.all %}
-               <span>Tagged<br /> 
-                {% for tag in entry.tags.all %}
-                <a href="{% url tagged-entries tag %}">{{ tag }}</a>{% if not forloop.last%}, {% endif %} 
-                {% endfor %}</span>
-            {% endif %}
+        <div class="closing">
+            <p>Did this pull on your heart-strings? If you have a question or comment, feel free to contact me. I'll be happy to respond if you're coorespondance is manerly. </p>
+<a href="https://twitter.com/gregnewman" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @gregnewman</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</span>            <p><span class="twitter-follow-butotn">You should follow me on Twitter (@gregnewman).</p>
+            <p><a href="https://www.facebook.com/NewmanStudiosFineArt">Also on Facebook</a></p>
         </div>
+    </article>
+    <aside class="three columns omega">
         {% if entry.related_content.all %}
         <div class="related">
             <h3>Related Entries</h3>
@@ -46,12 +36,27 @@
             </ul>
         </div>
         {% endif %}
-    </article>
 
-    <section class="entry-disqus">
-        <h2>Comments</h2>
-        <a name="disqus_thread"></a>
-        {% disqus_show_comments %}
-    </section>
-    <div class="clearfix"></div>
+        {% if entry.tags.all %}
+            <h3>Tagged</h3>
+            {% for tag in entry.tags.all %}
+            <a href="{% url tagged-entries tag %}">{{ tag }}</a>{% if not forloop.last%}, {% endif %} 
+            {% endfor %}</span>
+        {% endif %}
+
+        <div class="social-buttons">
+            <script src="//platform.twitter.com/widgets.js" type="text/javascript"></script>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-via="gregnewman" data-text="A must read:">Tweet</a>
+            <br />
+            
+            <g:plusone size="medium" annotation="none"></g:plusone>
+            <script type="text/javascript">
+              (function() {
+                var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+                po.src = 'https://apis.google.com/js/plusone.js';
+                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+              })();
+            </script>
+        </div>
+    </aside>
 {% endblock %}
