--- a/templates/blog/tag_list.html
+++ b/templates/blog/tag_list.html
@@ -1,5 +1,7 @@
 {% extends "site_base.html" %}
 
+{% block body-class %}journal-body{% endblock %}
+
 {% block content %}
     <h2>Entries matching tag "{{ tag.name }}"</h2>
     {% for entry in entries %}
