--- a/templates/portfolio/home.html
+++ b/templates/portfolio/home.html
@@ -1,4 +1,4 @@
-{% extends "base-no-aside.html" %}
+{% extends "base.html" %}
 
 {% block page_title %}Website of Greg Newman, Illustrator and Artist{% endblock %}
 
@@ -7,10 +7,10 @@
 
 {% block content %}
 <div class="home-banner"><img src="{{ STATIC_URL }}img/home-1.png" /></div>
-    <div class="about-copy">
-        <p>Greg Newman has been a freelance Illustrator/Artist specializing in portrait, wildlife and technical paintings and illustrations.  Greg also works as a devinger (designer & developer) since 2001 doing work for clients that include National Geographic, Discovery Channel and Broadway, to name a few.  Greg currently resides in Charlotte, North Carolina with his wife, son and two dogs.  Greg is accepting new projects and can be contacted through the <a href="/contact/">contact page</a>.</p>
+    <div class="about-copy row">
+        <p>Greg Newman is a freelance artist specializing in portrait, wildlife, motorcyle and technical paintings and illustrations.  Greg also works as a devinger (designer & developer) since 2001 doing work for clients that include National Geographic, Discovery Channel and Broadway, to name a few.  Greg currently resides in Charlotte, North Carolina with his wife, son and two dogs.  Greg is accepting new projects and can be contacted through the <a href="/contact/">contact page</a>.</p>
     </div>
-    <div class="portfolio-thumbs">
+    <div class="portfolio-thumbs row">
         {% for work in works %}
             <a href="{% url gallery-detail work.slug %}"><img src="{{ work.thumbnail.url }}" {% if forloop.counter|divisibleby:"5" %}class="thumb-last"{% endif %} /></a>
         {% endfor %}
