--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -1,4 +1,6 @@
-{% extends "base-no-aside.html" %}
+{% extends "base.html" %}
+
+{% block body-class %}portfolio-body{% endblock %}
 
 {% block page_title %}Portfolio of Greg Newman's Recent Work{% endblock %}
 
@@ -6,8 +8,8 @@
 {% block meta_description %}Portfolio of Greg Newman's illustration work.  Wildlife, portrait and motorcycle paintings.{% endblock %}
 
 {% block content %}
-<h2>{% if category %}{{ category|capfirst }} {% endif %}Gallery</h2>
     <div class="portfolio-thumbs">
+        <h1>{% if category %}{{ category|capfirst }} {% endif %}Gallery</h1>
         {% for work in works %}
         <a href="{% url gallery-detail work.slug %}"><img src="{{ work.thumbnail.url }}" {% if forloop.counter|divisibleby:"5" %}class="thumb-last"{% endif %} /></a>
         {% endfor %}
