--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -609,3 +609,12 @@ footer h3 {
     border: 6px solid #000;
 }
 
+
+/* ` Store View Elements
+----------------------------------------------------------------------------*/
+
+#home-page .product {
+    float: left;
+    width: 50%;
+}
+
