reduce font size

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -612,6 +612,10 @@ footer h3 {
 /* ` Store View Elements
 ----------------------------------------------------------------------------*/
 
+#navigation li {
+    font-size: 0.8em;
+}
+
 #home-page .product {
     float: left;
     width: 50%;
