--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -616,7 +616,8 @@ footer h3 {
     font-size: 0.8em;
 }
 
-#home-page .product {
+#home-page .product,
+#products-page .product {
     float: left;
     width: 50%;
 }
