--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -192,7 +192,7 @@ footer h3 { color: #F4DCAC; }
 ----------------------------------------------------------------------------*/
 #navigation li { font-size: 0.8em; }
 
-#home-page .product { float: left; width: 50%; }
+#home-page .product, #products-page .product { float: left; width: 50%; }
 
 #product-images .product-img { margin: 0 0 10px 0; }
 
