--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -784,7 +784,7 @@ footer h3 {
 #cart-body .item-options .remove-btn {
   width: 13px;
   height: 13px;
-  background: url({{ 'btn-delete.gif' | theme_image_url }}) no-repeat;
+  background: url('btn-delete.gif') no-repeat;
   border: none;
   cursor: pointer;
   display: block;
@@ -812,7 +812,7 @@ footer h3 {
   width: 85px;
   height: 18px;
   border: none;
-  background: url({{ 'btn-update.gif' | theme_image_url }}) no-repeat;
+  background: url('btn-update.gif') no-repeat;
   cursor: pointer;
   }
 
@@ -880,7 +880,7 @@ footer h3 {
   width: 66px;
   height: 18px;
   margin-left: 8px;
-  background: url({{ 'btn-checkout.gif' | theme_image_url }}) no-repeat;
+  background: url('btn-checkout.gif') no-repeat;
   border: none;
   cursor: pointer;
   }
