--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -263,7 +263,7 @@ footer h3 { color: #F4DCAC; }
 
 #cart-body .item-options { text-align: center; }
 
-#cart-body .item-options .remove-btn { width: 13px; height: 13px; background: url("btn-delete.gif") no-repeat; border: none; cursor: pointer; display: block; }
+#cart-body .item-options .remove-btn { cursor: pointer; display: block; }
 
 #cart-body .item-options span { display: none; }
 
@@ -272,7 +272,7 @@ footer h3 { color: #F4DCAC; }
 
 #cart-footer .cart-update { padding: 10px 0; text-align: right; border-top: 1px solid #ddd; border-bottom: 1px solid #ddd; }
 
-#cart-footer .update-btn { width: 85px; height: 18px; border: none; background: url("btn-update.gif") no-repeat; cursor: pointer; }
+#cart-footer .update-btn { cursor: pointer; }
 
 #cart-footer .cart-shipping { float: left; display: inline; margin: -31px 0 0 11px; }
 
@@ -296,7 +296,7 @@ footer h3 { color: #F4DCAC; }
 
 #cart-footer .cart-checkout { float: left; }
 
-#cart-footer .checkout-btn { width: 66px; height: 18px; margin-left: 8px; background: url("btn-checkout.gif") no-repeat; border: none; cursor: pointer; }
+#cart-footer .checkout-btn { margin-left: 8px; cursor: pointer; }
 
 #cart-footer .update-btn span, #cart-footer .checkout-btn span { display: none; }
 
