--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -238,7 +238,7 @@ footer h3 { color: #F4DCAC; }
 #col-options { width: 30px; }
 
 /* Cart Table Header ---------------------------------------*/
-#cart-head { font-size: 9px; color: #fff; background: #404040; }
+#cart-head { color: #fff; background: #824013; }
 
 #cart-head th { padding-top: 11px; padding-bottom: 11px; }
 
