--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -696,10 +696,11 @@ footer h3 {
 
 #cart-content {
   float: left;
-  }
+}
 
 #cart-table {
   text-align: left;
+  width: 100%;
   border-collapse: collapse;
   border-spacing: 0;
   }
@@ -712,15 +713,6 @@ footer h3 {
 #update-btn-head {
   display: none;
   }
-
-
-/* Cart Table Columns --------------------------------------*/
-
-#col-item    { width: 337px; }
-#col-price    { width: 65px; }
-#col-qty    { width: 40px; }
-#col-total    { width: 65px; }
-#col-options  { width: 30px; }
 
 
 /* Cart Table Header ---------------------------------------*/
