--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -220,22 +220,11 @@ footer h3 { color: #F4DCAC; }
 ============================================================*/
 #cart-content { float: left; }
 
-#cart-table { text-align: left; border-collapse: collapse; border-spacing: 0; }
+#cart-table { text-align: left; width: 100%; border-collapse: collapse; border-spacing: 0; }
 
 #cart-table td, #cart-table th { text-align: left; }
 
 #update-btn-head { display: none; }
-
-/* Cart Table Columns --------------------------------------*/
-#col-item { width: 337px; }
-
-#col-price { width: 65px; }
-
-#col-qty { width: 40px; }
-
-#col-total { width: 65px; }
-
-#col-options { width: 30px; }
 
 /* Cart Table Header ---------------------------------------*/
 #cart-head { color: #fff; background: #824013; }
