--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -734,7 +734,13 @@ footer h3 {
 #head-options span {
   display: none;
   }
+/* Cart Table Columns --------------------------------------*/
 
+#col-item    { width: 337px; }
+#col-price    { width: 65px; }
+#col-qty    { width: 40px; }
+#col-total    { width: 65px; }
+#col-options  { width: 30px; }
 
 /* Cart Table Body -----------------------------------------*/
 
