--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -235,6 +235,17 @@ footer h3 { color: #F4DCAC; }
 
 #head-options span { display: none; }
 
+/* Cart Table Columns --------------------------------------*/
+#col-item { width: 337px; }
+
+#col-price { width: 65px; }
+
+#col-qty { width: 40px; }
+
+#col-total { width: 65px; }
+
+#col-options { width: 30px; }
+
 /* Cart Table Body -----------------------------------------*/
 #cart-body th { padding-left: 10px; font-weight: normal; }
 
