--- a/templates/portfolio/home.html
+++ b/templates/portfolio/home.html
@@ -2,13 +2,13 @@
 
 {% block page_title %}Website of Greg Newman, Illustrator and Artist{% endblock %}
 
-{% block meta_keywords %}gallery, portfolio, greg newman, illustration, art, paintings, wildlife, motorcycles, harley davidson, sports, portraits, , sketches, drawings{% endblock %}
+{% block meta_keywords %}Newman Studios, gallery, portfolio, greg newman, illustration, art, paintings, wildlife, motorcycles, harley davidson, sports, portraits, , sketches, drawings, harley-davidson art, harley davidson paintings, harley-davidson, motorcycle art, vintage art, artwork, fine art, prints, designer apparel, t-shirts, illustration{% endblock %}
 {% block meta_description %}Greg Newman's recent illustration, store and blog.  Wildlife, portrait and motorcycle paintings.{% endblock %}
 
 {% block content %}
 <div class="home-banner"><img src="{{ STATIC_URL }}img/home-1.png" /></div>
     <div class="about-copy row">
-        <p>Greg Newman is a freelance artist specializing in portrait, wildlife, motorcyle and technical paintings and illustrations.  Greg also works as a devinger (designer & developer) since 2001 doing work for clients that include National Geographic, Discovery Channel and Broadway, to name a few.  Greg currently resides in Charlotte, North Carolina with his wife, son and two dogs.  Greg is accepting new projects and can be contacted through the <a href="/contact/">contact page</a>.</p>
+        <p>Newman Studios and Fine Art is a illustration, design and fine art studio located in Charlotte, North Carolina.  Greg Newman is a recognized freelance artist specializing in portrait, wildlife, motorcyle and technical paintings and illustrations.  Greg also works as a devinger (designer & developer) servicing clients that include (but are not limited to) National Geographic, Discovery Channel and Broadway.  Newman Studios and Fine Art is accepting new projects and can be contacted through the <a href="/contact/">contact page</a>.</p>
     </div>
     <div class="portfolio-thumbs row">
         {% for work in works %}
