adjusted footer layout

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -580,7 +580,7 @@ aside {
 .skull {
     position: absolute;
     bottom: 20px;
-    left: 0px;
+    right: 0px;
 }
 
 footer h3 {
@@ -601,7 +601,6 @@ footer h3 {
 }
 
 .dribbble-shots {
-    display: block;
 }
 
 .dribbble-shots img {
