--- a/templates/blog/entry_detail.html
+++ b/templates/blog/entry_detail.html
@@ -45,18 +45,18 @@
         {% endif %}
 
         <div class="social-buttons">
-            <script src="//platform.twitter.com/widgets.js" type="text/javascript"></script>
-            <a href="https://twitter.com/share" class="twitter-share-button" data-via="gregnewman" data-text="A must read:">Tweet</a>
-            <br />
+            <!-- AddThis Button BEGIN -->
+            <div class="addthis_toolbox addthis_default_style ">
+            <a class="addthis_button_preferred_1"></a>
+            <a class="addthis_button_preferred_2"></a>
+            <a class="addthis_button_preferred_3"></a>
+            <a class="addthis_button_preferred_4"></a>
+            <a class="addthis_button_compact"></a>
+            <a class="addthis_counter addthis_bubble_style"></a>
+            </div>
+            <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4e96de0a5497a4f8"></script>
+            <!-- AddThis Button END -->
             
-            <g:plusone size="medium" annotation="none"></g:plusone>
-            <script type="text/javascript">
-              (function() {
-                var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-                po.src = 'https://apis.google.com/js/plusone.js';
-                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-              })();
-            </script>
         </div>
     </aside>
 {% endblock %}
