--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -330,19 +330,20 @@ blockquote {
 }
 
 .about-copy {
-    width: 800px;
-    margin: 20px auto;
-    text-align: center;
+    padding: 0 15px;
+    margin: 40px auto;
 }
 
 .portfolio-thumbs {
-    width: 820px;
-    margin: 0 auto;
 }
 
 .portfolio-thumbs img {
-    margin: 10px ;
+    margin: 0 20px 15px 0;
     border: 6px solid #000;
+}
+
+.thumb-last {
+    margin-right: 0 !important;
 }
 
 .portfolio-thumbs img:hover {
