--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -92,11 +92,11 @@ blockquote { font: 18px/27px "MerriweatherBold", Arial, sans-serif; color: #333;
 ----------------------------------------------------------------------------*/
 .home-banner { text-align: center; }
 
-.about-copy { width: 800px; margin: 20px auto; text-align: center; }
+.about-copy { padding: 0 15px; margin: 40px auto; }
 
-.portfolio-thumbs { width: 820px; margin: 0 auto; }
+.portfolio-thumbs img { margin: 0 20px 15px 0; border: 6px solid #000; }
 
-.portfolio-thumbs img { margin: 10px; border: 6px solid #000; }
+.thumb-last { margin-right: 0 !important; }
 
 .portfolio-thumbs img:hover { -moz-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4); -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4); box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4); }
 
