--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -334,17 +334,17 @@ blockquote {
     margin: 40px auto;
 }
 
-.portfolio-thumbs {
-}
-
 .portfolio-thumbs img {
     margin: 0 20px 15px 0;
     border: 6px solid #000;
 }
 
-.thumb-last {
-    margin-right: 0 !important;
-}
+.thumb-6,
+.thumb-12,
+.thumb-18,
+.thumb-24,
+.thumb-30 { margin-right: 0 !important; }
+
 
 .portfolio-thumbs img:hover {
     -moz-box-shadow: 3px 3px 3px rgba(0,0,0,0.4);
@@ -876,3 +876,43 @@ span.total-shipping {
     margin: 20px 0 0 28px;
 }
 
+
+
+/* #Tablet (Portrait)
+================================================== */
+
+    /* Note: Design for a width of 768px */
+
+    @media only screen and (min-width: 768px) and (max-width: 959px) {
+        .home-banner img {
+            width: 768px;
+        }
+
+        .portfolio-thumbs img { margin: 0 15px 10px 0; }
+        .thumb-5,
+        .thumb-10,
+        .thumb-15,
+        .thumb-20 { margin-right: 0 !important; }
+    }
+
+    /*  #Mobile (Portrait)
+================================================== */
+
+    /* Note: Design for a width of 320px */
+
+    @media only screen and (max-width: 767px) {
+        .home-banner img {
+            width: 320px;
+        }
+
+        .bike { display: none; }
+        header h1 img { width: 370px; }
+    }
+
+/* #Mobile (Landscape)
+================================================== */
+
+    /* Note: Design for a width of 480px */
+
+    @media only screen and (min-width: 480px) and (max-width: 767px) {
+    }
