--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -96,7 +96,7 @@ blockquote { font: 18px/27px "MerriweatherBold", Arial, sans-serif; color: #333;
 
 .portfolio-thumbs img { margin: 0 20px 15px 0; border: 6px solid #000; }
 
-.thumb-last { margin-right: 0 !important; }
+.thumb-6, .thumb-12, .thumb-18, .thumb-24, .thumb-30 { margin-right: 0 !important; }
 
 .portfolio-thumbs img:hover { -moz-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4); -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4); box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4); }
 
@@ -291,3 +291,19 @@ footer h3 { color: #F4DCAC; }
 span.total-discount, span.total-shipping { font-weight: bold; }
 
 #product-page .addthis_toolbox { margin: 20px 0 0 28px; }
+
+/* #Tablet (Portrait)
+================================================== */
+/* Note: Design for a width of 768px */
+@media only screen and (min-width: 768px) and (max-width: 959px) { .home-banner img { width: 768px; }
+  .portfolio-thumbs img { margin: 0 15px 10px 0; }
+  .thumb-5, .thumb-10, .thumb-15, .thumb-20 { margin-right: 0 !important; } }
+    /*  #Mobile (Portrait)
+================================================== */
+/* Note: Design for a width of 320px */
+@media only screen and (max-width: 767px) { .home-banner img { width: 320px; }
+  .bike { display: none; }
+  header h1 img { width: 370px; } }
+/* #Mobile (Landscape)
+================================================== */
+/* Note: Design for a width of 480px */
