fixing thumbs layouts

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -888,6 +888,12 @@ span.total-shipping {
             width: 768px;
         }
 
+        .thumb-6,
+        .thumb-12,
+        .thumb-18,
+        .thumb-24,
+        .thumb-30 { margin-right: 15px !important; }
+
         .portfolio-thumbs img { margin: 0 15px 10px 0; }
         .thumb-5,
         .thumb-10,
