--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -214,6 +214,10 @@ footer img {
     line-height: 43px;
 }
 
+.navbar a:hover {
+    color: #f4dcac;
+}
+
 .navbar li.shop-link {
     padding-left: 15px;
     background: #000 url(../img/shop_nav_bg.png) no-repeat left bottom;
