--- a/templates/portfolio/home.html
+++ b/templates/portfolio/home.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="home-banner"><img src="{{ STATIC_URL }}img/home-1.png" /></div>
     <div class="about-copy rows">
-        <p>Newman Studios and Fine Art is an illustration, design and fine art studio located in Charlotte, North Carolina.  Owner, Greg Newman, is a recognized freelance artist specializing in portrait, wildlife, motorcyle and technical paintings and illustrations.  Greg also works as a devinger (designer & developer) servicing clients that include (but are not limited to) National Geographic, Discovery Channel and Broadway.  Newman Studios and Fine Art is accepting new projects and can be contacted through the <a href="/contact/">contact page</a>.</p>
+        <p>Newman Studios and Fine Art is an illustration, design and fine art studio located in Charlotte, North Carolina.  Owner, Greg Newman, is a recognized freelance artist specializing in portrait, wildlife, motorcyle and technical paintings and illustrations.  Greg also works as a devigner (designer & developer) servicing clients that include (but are not limited to) National Geographic, Discovery Channel and Broadway.  Newman Studios and Fine Art is accepting new projects and can be contacted through the <a href="/contact/">contact page</a>.</p>
     </div>
     <div class="portfolio-thumbs rows">
         {% for work in works %}
