--- a/templates/base.html
+++ b/templates/base.html
@@ -67,12 +67,12 @@
         <div class="container sixteen columns">
             <div class="navbar ten columns alpha">
                 <ul>
-                    <li class="shop-link"><a href="http://shop.gregnewman.org">Shop</a></li>
-                    <li class="about-nav"><a href="/about/">About</a></li>
-                    <li class="commissions-nav"><a href="/commissions/">Commissions</a></li>
-                    <li class="journal-nav"><a href="/journal/">Journal</a></li> 
-                    <li class="portfolio-nav"><a href="/portfolio/">Gallery</a></li>
-                    <li class="contact-nav"><a href="/contact/">Contact</a></li>
+                    <li class="shop-link"><a href="http://shop.gregnewman.org" title="Shop">Shop</a></li>
+                    <li class="about-nav"><a href="/about/" title="About Greg Newman">About</a></li>
+                    <li class="commissions-nav"><a href="/commissions/" title="How commissions work">Commissions</a></li>
+                    <li class="journal-nav"><a href="/journal/" title="Greg's blog">Journal</a></li> 
+                    <li class="portfolio-nav"><a href="/portfolio/" title="Recent work">Gallery</a></li>
+                    <li class="contact-nav"><a href="/contact/" title="Contact Greg">Contact</a></li>
                 </ul>
             </div>
             <div class="social six columns omega">
